# EA

./: .gitignore  00_START_HERE.txt  CMakeLists.txt  COMPLETE_EA_VERSIONS_OVERVIEW.txt  GRASSHOPPER_EA_VERSIONS_SUMMARY.txt  Grasshopper.code-workspace  MULTI_SYMBOL_COMPLETE_SETUP.md  README.md  UNIVERSAL_SYMBOLS_TRADING_GUIDE.md
Config/: Settings.json
Docs/: API_REQUIREMENTS.md  PHASE1_PROGRESS.md  PROJECT_SETUP_COMPLETE.md  VSCODE_SETUP.md
Source/: Grasshopper.mq5  Grasshopper_MULTI.mq5  Grasshopper_UNIVERSAL.mq5
Source/Include/: ChartData.mqh  FibonacciLevels.mqh  ImpulseCorrection.mqh  MultiSymbolManager.mqh  PatternRecognizer.mqh  TrendAnalyzer.mqh  UniversalSymbolAdapter.mqh
Tests/: main_test.cpp
